--- a/Kreta/appsettings.Development.json
+++ b/Kreta/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "connect": "Database=Kreta;Host=localhost;UserId=postgres;Password=root"
+    },
+        "Logging": {
+            "LogLevel": {
+                "Default": "Information",
+                "Microsoft.AspNetCore": "Warning"
+            }
+        }
     }
-  }
-}
